Add Qt 6 support to CMake project
This changes the following things

- increases required minimum cmake to 3.16
- modernizes cmake to set target scoped configurations
- removes Qt4 compatibility in cmake as it not mentioned in the readme anymore
- replaces QtKeychain find_packages with a FetchContent directly from github

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,7 +1,8 @@
-cmake_minimum_required(VERSION 2.8.11)
+cmake_minimum_required(VERSION 3.16)
 
 if(o2_WITH_FACEBOOK)
     add_subdirectory(facebookdemo)
+    add_subdirectory(facebookexternalinterceptordemo)
 endif(o2_WITH_FACEBOOK)
 
 if(o2_WITH_GOOGLE)
@@ -12,13 +13,13 @@ if(o2_WITH_TWITTER)
     add_subdirectory(twitterdemo)
 endif(o2_WITH_TWITTER)
 
-#if(o2_WITH_SPOTIFY)
-#    add_subdirectory(spotifydemo)
-#endif(o2_WITH_SPOTIFY)
-
 if (o2_WITH_VIMEO)
     add_subdirectory(vimeodemo)
 endif(o2_WITH_VIMEO)
+
+if (o2_WITH_YOUTUBE)
+    add_subdirectory(youtubedemo)
+endif(o2_WITH_YOUTUBE)
 
 if (o2_WITH_MSGRAPH)
     add_subdirectory(msgraphdemo)
