--- a/examples/vimeodemo/CMakeLists.txt
+++ b/examples/vimeodemo/CMakeLists.txt
@@ -1,44 +1,30 @@
-cmake_minimum_required(VERSION 2.8.11)
+cmake_minimum_required(VERSION 3.16)
 
-project( vimeoexample )
+project(vimeoexample)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
-if(o2_WITH_QT5)
-    # Qt5 packages find their own dependencies.
-    find_package(Qt5Core    REQUIRED)
-    find_package(Qt5Gui     REQUIRED)
-    find_package(Qt5Network REQUIRED)
-    find_package(Qt5Widgets REQUIRED)
-else(o2_WITH_QT5)
-    set(QT_USE_QTNETWORK true)
-    set(QT_USE_QTSCRIPT true)
-    find_package(Qt4 REQUIRED)
-endif(o2_WITH_QT5)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Network Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Network Widgets)
 
-if (NOT o2_WITH_QT5)
-    include( ${QT_USE_FILE} )
-endif(NOT o2_WITH_QT5)
-
-include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} "../../src" )
-
-set(vimeo_SRCS
+add_executable(${PROJECT_NAME} WIN32
     main.cpp
     vimeodemo.cpp
     vimeodemo.h
 )
 
-if(NOT o2_WITH_QT5)
-    add_definitions(${QT4_DEFINITIONS})
-endif(NOT o2_WITH_QT5)
+target_link_libraries(${PROJECT_NAME}
+    PRIVATE
+    o2
 
-add_executable( vimeoexample ${vimeo_SRCS} )
+    Qt${QT_MAJOR_VERSION}::Core
+    Qt${QT_MAJOR_VERSION}::Network
+    Qt${QT_MAJOR_VERSION}::Widgets
+)
 
-if(o2_WITH_QT5)
-    qt5_use_modules( vimeoexample Core Gui Network Widgets )
-    target_link_libraries( vimeoexample o2 )
-else(o2_WITH_QT5)
-    target_link_libraries( vimeoexample ${QT_LIBRARIES} o2 )
-endif(o2_WITH_QT5)
+if (MSVC)
+    target_compile_options(${PROJECT_NAME} PRIVATE /W3)
+else()
+    target_compile_options(${PROJECT_NAME} PRIVATE -Wall)
+endif()
