Fix source path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
           -Do2_WITH_SURVEYMONKEY:BOOL=ON \
           -Do2_WITH_TWITTER:BOOL=ON \
           -Do2_WITH_UBER:BOOL=ON \
-          -Do2_WITH_VIMEO:BOOL=ON
+          -Do2_WITH_VIMEO:BOOL=ON \
           ..
           ninja
 
