--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,8 @@ jobs:
             ninja-build \
             clang \
             qtbase5-dev \
-            qt5keychain-dev
+            qt5keychain-dev \
+            qtscript5-dev
           
       - name: Build
         run: |
