--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ if(NOT o2_SHOW_TRACE)
   add_definitions(-DQT_NO_DEBUG_OUTPUT=1)
 endif()
 
+option(o2_WITH_TESTS "Enable tests" OFF)
 option(o2_WITH_TWITTER "Authenticate with Twitter" OFF)
 option(o2_WITH_DROPBOX "Authenticate with Dropbox" OFF)
 option(o2_WITH_GOOGLE "Authenticate with Google" OFF)
@@ -104,3 +105,8 @@ add_subdirectory(src)
 if(o2_BUILD_EXAMPLES)
   add_subdirectory(examples)
 endif(o2_BUILD_EXAMPLES)
+
+if(o2_WITH_TESTS)
+  enable_testing()
+  add_subdirectory(tests)
+endif()
