--- a/.github/workflows/clazy.yml
+++ b/.github/workflows/clazy.yml
@@ -57,5 +57,6 @@ jobs:
         uses: MinyazevR/clazy-standalone-action@v0.2.1
         with:
           checks: 'level0,level1,old-style-connect'
+          warnings_as_errors: 'level0,level1,old-style-connect'
           install-stable: true
           database: build
