--- a/.github/workflows/clazy.yml
+++ b/.github/workflows/clazy.yml
@@ -25,7 +25,7 @@ jobs:
             qtscript5-dev \
             qtwebengine5-dev
 
-      - name: Configure
+      - name: Build
         run: |
           mkdir -p build
           cd build
@@ -58,7 +58,7 @@ jobs:
         id: clazy
         uses: ./.github/actions/clazy
         with:
-          checks: 'level0,level1,old-style-connect'
+          checks: 'level0,level1,old-style-connect,no-overloaded-signal''
           install-stable: true
           database: build
         outputs:
