--- a/.github/workflows/clazy.yml
+++ b/.github/workflows/clazy.yml
@@ -58,14 +58,21 @@ jobs:
         id: clazy
         uses: ./.github/actions/clazy
         with:
-          checks: 'level0,level1,old-style-connect,no-overloaded-signal''
+          checks: 'level0,level1,old-style-connect,no-overloaded-signal'
           install-stable: true
           database: build
-        outputs:
-          warnings-count:
-            description: 'Total warnings count'
-          errors-count:
-            description: 'Total warnings count'
+
+      - name: Check Results
+        run: |
+          # Read directly from GITHUB_OUTPUT
+          WARNINGS=$(grep "^warnings-count=" $GITHUB_OUTPUT | cut -d'=' -f2)
+          ERRORS=$(grep "^errors-count=" $GITHUB_OUTPUT | cut -d'=' -f2)
+          echo "Direct read - Warnings: $WARNINGS, Errors: $ERRORS"
+
+          if [ "$WARNINGS" -gt "0" ] || [ "$ERRORS" -gt "0" ]; then
+            echo "Found $WARNINGS warnings and $ERRORS errors"
+            exit 1
+          fi
 
       - name: Dump results
         run: |
