Fix cmake warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 2.8.11)
+cmake_minimum_required(VERSION 3.5.0)
 
 if(POLICY CMP0048) # in CMake >= 3.0.0
-    cmake_policy(SET CMP0048 OLD) # keep project() from clearing VERSION variables
+    cmake_policy(SET CMP0048 NEW)
 endif(POLICY CMP0048)
 
 set( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules )
@@ -16,7 +16,7 @@ set(CPACK_PACKAGE_VERSION_PATCH ${VER_PATCH})
 set(PROJECT_VERSION ${VER_MAJOR}.${VER_MINOR}.${VER_PATCH})
 set(API_VERSION ${VER_MAJOR}.${VER_MINOR}.${API_VER_PATCH})
 
-project(o2)
+project(o2 VERSION ${PROJECT_VERSION})
 
 option(o2_WITH_QT5 "Use Qt5" ON)
 
