--- a/examples/youtubedemo/CMakeLists.txt
+++ b/examples/youtubedemo/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.11)
+cmake_minimum_required(VERSION 3.5.0)
 
 project( ytexample )
 
@@ -37,7 +37,7 @@ endif(NOT o2_WITH_QT5)
 add_executable( ytexample ${yt_SRCS} )
 
 if(o2_WITH_QT5)
-    qt5_use_modules( ytexample Core Gui Network Widgets )
+    target_link_libraries( ytexample Qt5::Core Qt5::Gui Qt5::Network Qt5::Widgets )
     target_link_libraries( ytexample o2 )
 else(o2_WITH_QT5)
     target_link_libraries( ytexample ${QT_LIBRARIES} o2 )
