Run tests on mac

--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -42,3 +42,8 @@ jobs:
             CCACHE_DIR: ${{ github.workspace }}/.ccache
             TRAVIS_OS_NAME: osx
             BUILD_NAME: osx
+
+      - name: Run Tests
+        run: |
+          cd build
+          ctest --output-on-failure --no-compress-output -T Test
