--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,19 @@
-name: 🧪Qt 5 linux build
+name: 🧪 Linux build
 
 on:
   push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
 
 jobs:
   build:
+    strategy:
+      matrix:
+        qt_version: [5, 6]
+
     runs-on: ubuntu-latest
     
     steps:
@@ -16,41 +22,56 @@ jobs:
         
       - name: Get deps
         run: |
+          if [ "${{ matrix.qt_version }}" -eq 6 ]; then
+              QT_PACKAGES="qt6-base-dev \
+                qtkeychain-qt6-dev \
+                qt6-webengine-dev \
+                qt6-webengine-dev-tools \
+                libglx-dev \
+                libgl1-mesa-dev"
+          else
+              QT_PACKAGES="qtbase5-dev \
+                qt5keychain-dev \
+                qtscript5-dev \
+                qtwebengine5-dev"
+          fi
           sudo apt-get install \
             cmake \
             ninja-build \
             clang \
-            qtbase5-dev \
-            qt5keychain-dev \
-            qtscript5-dev \
-            qtwebengine5-dev
+            ${QT_PACKAGES}
+
           
       - name: Build
         run: |
-          mkdir -p build
-          cd build
+          if [ "${{ matrix.qt_version }}" -eq 6 ]; then
+              CMAKE_QT_OPTION="o2_WITH_QT6:BOOL=ON"
+          else
+              CMAKE_QT_OPTION="o2_WITH_QT6:BOOL=OFF"
+          fi
           cmake -GNinja \
-          -Do2_BUILD_EXAMPLES:BOOL=ON \
-          -Do2_WITH_TESTS=ON \
-          -Do2_SHOW_TRACE:BOOL=ON \
-          -Do2_WITH_DROPBOX:BOOL=ON \
-          -Do2_WITH_FACEBOOK:BOOL=ON \
-          -Do2_WITH_FLICKR:BOOL=ON \
-          -Do2_WITH_GOOGLE:BOOL=ON \
-          -Do2_WITH_HUBIC:BOOL=ON \
-          -Do2_WITH_KEYCHAIN:BOOL=ON \
-          -Do2_WITH_MSGRAPH:BOOL=ON \
-          -Do2_WITH_OAUTH1:BOOL=ON \
-          -Do2_WITH_QT5:BOOL=ON \
-          -Do2_WITH_SKYDRIVE:BOOL=ON \
-          -Do2_WITH_SMUGMUG:BOOL=ON \
-          -Do2_WITH_SPOTIFY:BOOL=ON \
-          -Do2_WITH_SURVEYMONKEY:BOOL=ON \
-          -Do2_WITH_TWITTER:BOOL=ON \
-          -Do2_WITH_UBER:BOOL=ON \
-          -Do2_WITH_VIMEO:BOOL=ON \
-          ..
-          ninja
+            -Do2_BUILD_EXAMPLES:BOOL=ON \
+            -Do2_WITH_TESTS=ON \
+            -Do2_SHOW_TRACE:BOOL=ON \
+            -Do2_WITH_DROPBOX:BOOL=ON \
+            -Do2_WITH_FACEBOOK:BOOL=ON \
+            -Do2_WITH_FLICKR:BOOL=ON \
+            -Do2_WITH_GOOGLE:BOOL=ON \
+            -Do2_WITH_HUBIC:BOOL=ON \
+            -Do2_WITH_KEYCHAIN:BOOL=ON \
+            -Do2_WITH_MSGRAPH:BOOL=ON \
+            -Do2_WITH_OAUTH1:BOOL=ON \
+            -D${CMAKE_QT_OPTION} \
+            -Do2_WITH_SKYDRIVE:BOOL=ON \
+            -Do2_WITH_SMUGMUG:BOOL=ON \
+            -Do2_WITH_SPOTIFY:BOOL=ON \
+            -Do2_WITH_SURVEYMONKEY:BOOL=ON \
+            -Do2_WITH_TWITTER:BOOL=ON \
+            -Do2_WITH_UBER:BOOL=ON \
+            -Do2_WITH_VIMEO:BOOL=ON \
+            -S . \
+            -B build
+          cmake --build build
 
       - name: Run Tests
         run: |
