--- a/.github/workflows/coverity-scan.yml
+++ b/.github/workflows/coverity-scan.yml
@@ -36,7 +36,7 @@ jobs:
             -Do2_WITH_KEYCHAIN:BOOL=ON \
             -Do2_WITH_MSGRAPH:BOOL=ON \
             -Do2_WITH_OAUTH1:BOOL=ON \
-            -Do2_WITH_QT5:BOOL=ON \
+            -Do2_WITH_QT6:BOOL=OFF \
             -Do2_WITH_SKYDRIVE:BOOL=ON \
             -Do2_WITH_SMUGMUG:BOOL=ON \
             -Do2_WITH_SPOTIFY:BOOL=ON \
