--- a/examples/msgraphexternalinterceptordemo/CMakeLists.txt
+++ b/examples/msgraphexternalinterceptordemo/CMakeLists.txt
@@ -7,23 +7,11 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
-if(o2_WITH_QT5)
-    # Qt5 packages find their own dependencies.
-    find_package(Qt5Core    REQUIRED)
-    find_package(Qt5Widgets REQUIRED)
-    find_package(Qt5Script  REQUIRED)
-    find_package(Qt5Network REQUIRED)
-    find_package(Qt5WebEngine REQUIRED)
-    find_package(Qt5WebEngineWidgets REQUIRED)
-else(o2_WITH_QT5)
-    set(QT_USE_QTNETWORK true)
-    set(QT_USE_QTSCRIPT true)
-    find_package(Qt4 REQUIRED)
-endif(o2_WITH_QT5)
-
-if (NOT o2_WITH_QT5)
-    include( ${QT_USE_FILE} )
-endif(NOT o2_WITH_QT5)
+if(o2_WITH_QT6)
+    find_package(Qt6 COMPONENTS Core Widgets Network WebEngineCore WebEngineWidgets REQUIRED)
+else()
+    find_package(Qt5 COMPONENTS Core Widgets Script Network WebEngine WebEngineWidgets REQUIRED)
+endif()
 
 include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} "../../src" )
 
@@ -34,15 +22,7 @@ set(msgraph_SRCS
     webenginepage.cpp
 )
 
-if(NOT o2_WITH_QT5)
-    add_definitions(${QT4_DEFINITIONS})
-endif(NOT o2_WITH_QT5)
-
 add_executable( msgraphexternalinterceptorexample ${msgraph_SRCS} )
 
-if(o2_WITH_QT5)
-    target_link_libraries( msgraphexternalinterceptorexample Qt5::Core Qt5::Widgets Qt5::Network Qt5::WebEngine Qt5::WebEngineWidgets )
-    target_link_libraries( msgraphexternalinterceptorexample o2 )
-else(o2_WITH_QT5)
-    target_link_libraries( msgraphexternalinterceptorexample ${QT_LIBRARIES} o2 )
-endif(o2_WITH_QT5)
+target_link_libraries( msgraphexternalinterceptorexample Qt::Core Qt::Widgets Qt::Network Qt::WebEngineWidgets )
+target_link_libraries( msgraphexternalinterceptorexample o2 )
