--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,19 +4,11 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
-if(o2_WITH_QT5)
+if(o2_WITH_QT6)
+    find_package(Qt6 COMPONENTS Core Network REQUIRED)
+else()
     find_package(Qt5 COMPONENTS Core Network REQUIRED)
-else(o2_WITH_QT5)
-    set(QT_USE_QTNETWORK true)
-    set(QT_USE_QTSCRIPT true)
-    find_package(Qt4 REQUIRED)
-endif(o2_WITH_QT5)
-#find_package(QJson REQUIRED)
-
-if (NOT o2_WITH_QT5)
-    include( ${QT_USE_FILE} )
-endif(NOT o2_WITH_QT5)
-
+endif()
 
 set( o2_SRCS
     o2.cpp
@@ -205,10 +197,6 @@ if(o2_WITH_KEYCHAIN)
 
 endif(o2_WITH_KEYCHAIN)
 
-if(NOT o2_WITH_QT5)
-    add_definitions(${QT4_DEFINITIONS})
-endif(NOT o2_WITH_QT5)
-
 if(BUILD_SHARED_LIBS AND APPLE AND POLICY CMP0042) # in CMake >= 2.8.12
     cmake_policy(SET CMP0042 OLD)
     set(CMAKE_MACOSX_RPATH OFF) # don't embed @rpath in install name
@@ -220,11 +208,7 @@ if(BUILD_SHARED_LIBS)
     add_definitions( -DO2_SHARED_LIB )
 endif(BUILD_SHARED_LIBS)
 
-if(o2_WITH_QT5)
-    target_link_libraries( o2 Qt5::Core Qt5::Network ${LINK_TARGETS})
-else(o2_WITH_QT5)
-    target_link_libraries( o2 ${QT_LIBRARIES} ${LINK_TARGETS})
-endif(o2_WITH_QT5)
+target_link_libraries( o2 Qt::Core Qt::Network ${LINK_TARGETS})
 
 if(BUILD_SHARED_LIBS)
     if(APPLE)
