--- a/.github/workflows/coverity-scan.yml
+++ b/.github/workflows/coverity-scan.yml
@@ -12,7 +12,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     if: github.repository == 'qgis/o2'
     steps:
       - uses: actions/checkout@v2
@@ -42,7 +42,7 @@ jobs:
             -Do2_WITH_SPOTIFY:BOOL=ON \
             -Do2_WITH_SURVEYMONKEY:BOOL=ON \
             -Do2_WITH_UBER:BOOL=ON \
-            -Do2_WITH_VIMEO:BOOL=ON \
+            -Do2_WITH_VIMEO:BOOL=ON
       - name: Download Coverity Build Tool
         run: |
           wget -q https://scan.coverity.com/download/linux64 --post-data "token=$TOKEN&project=qgis%2Fo2" -O cov-analysis-linux64.tar.gz
